--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.10.1</version>
         <configuration>
           <verbose>true</verbose>
           <fork>true</fork>
@@ -38,7 +38,12 @@
     <artifactId>selenium-server</artifactId>
     <version>3.141.59</version>
 </dependency>
-
+<dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.10.1</version>
+  <type>maven-plugin</type>
+</dependency>
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
