--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.10.0</version>
         <configuration>
           <verbose>true</verbose>
           <fork>true</fork>
           <executable>${JAVA_HOME}/bin/javac</executable>
-          <compilerVersion>1.3</compilerVersion>
+          <compilerVersion>1.2</compilerVersion>
         </configuration>
       </plugin>
       <plugin>
@@ -30,7 +30,41 @@
         </configuration>
       </plugin>
   </plugins>
-  </build>
+  <pluginManagement>
+  	<plugins>
+  		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+  		<plugin>
+  			<groupId>org.eclipse.m2e</groupId>
+  			<artifactId>lifecycle-mapping</artifactId>
+  			<version>1.0.0</version>
+  			<configuration>
+  				<lifecycleMappingMetadata>
+  					<pluginExecutions>
+  						<pluginExecution>
+  							<pluginExecutionFilter>
+  								<groupId>
+  									org.apache.maven.plugins
+  								</groupId>
+  								<artifactId>
+  									maven-compiler-plugin
+  								</artifactId>
+  								<versionRange>[3.0.0,)</versionRange>
+  								<goals>
+  									<goal>compile</goal>
+  									<goal>testCompile</goal>
+  								</goals>
+  							</pluginExecutionFilter>
+  							<action>
+  								<ignore></ignore>
+  							</action>
+  						</pluginExecution>
+  					</pluginExecutions>
+  				</lifecycleMappingMetadata>
+  			</configuration>
+  		</plugin>
+  	</plugins>
+  </pluginManagement>
+</build>
   
   <dependencies>
   <dependency>
