--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
   <groupId>abcdef</groupId>
   <artifactId>NewProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+  <properties>
+ <maven.compiler.source>17</maven.compiler.source>
+ <maven.compiler.target>17</maven.compiler.target>
+</properties>
   
   
 <build>
